[tool.poetry]
name = "pypi2ipynb"
version = "0.1.0"
description = ""
authors = ["cm-fujikawa <fujikawa.takuji@classmethod.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
markdownify = "^0.13.1"
nbformat = "^5.10.4"
nbconvert = "^7.16.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
